[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Hwlhwlxyz <huweilun19941104@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.32"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlBodyElement',
  'Node',
  'NodeList',
  'Window',
  'console'
]